<resources>
    <string name="app_name">HOA Application</string>
    <string name="loginButton">Login</string>
    <string name="createNewUserButton">Create New User</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="adminAccess">Access Admin Features</string>
    <string name="displayPersonalInformation">Personal Information</string>
    <string name="dialogMessage">Do you want to access Admin features?</string>
    <string name="statusChange">Status Change</string>
    <string name="statusSelect">Select the Status</string>
    <string name="createUserTitle">Create New User</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="streetLabel">Street</string>
    <string name="cityLabel">City</string>
    <string name="stateLabel">State</string>
    <string name="zipLabel">Zip Code</string>
    <string name="phoneLabel">Phone</string>
    <string name="emailLabel">Email</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="GoBack">Return</string>
    <string name="createNewWorkOrder">New Work Order</string>
    <string name="description">Description</string>
    <string name="attachPhoto">Attach Photo</string>
    <string name="workOrderListID">ID</string>
    <string name="test">test</string>
    <string name="uploadRulesAndPolicies">Upload Rules and Policies</string>
    <string name="rulesAndPolicies">Rules and Policies</string>
    <string name="editHomeOwners">Edit Home Owners</string>
    <string name="blankList">There are no Work Orders to View</string>
    <string name="createdOn">Created On: </string>
    <string name="createdBy">Created By: </string>
    <string name="pending">Pending</string>
    <string name="denied">Denied</string>
    <string name="approved">Approved</string>
    <string name="deleteWO">Delete Work Order</string>
    <string name="deleteWOMessage">Are you sure you want to delete this work order?</string>
    <string name="deleteUser">Delete Home Owner</string>
    <string name="deleteUserMessage">Are you sure you want to delete this home owner?</string>
    <string name="comment">Comment</string>
    <string name="addComment">Enter Comment</string>
    <string name="adminMainStatusButton">Select status to View</string>
    <string name="homeOwners">Home Owners</string>
    <string name="editUserTitle">Edit User</string>
    <string name="isAdmin">Admin Access</string>

    <string-array name="statusOptions">
        <item>Pending</item>
        <item>Approved</item>
        <item>Denied</item>
    </string-array>
</resources>
