<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/outerMarginSpace"
    tools:context=".HomeOwnerMainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeOwnerMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewHomeOwnerMain"
        >

        <TextView
            android:id="@+id/adminMainWorkOrderLabel"
            style="@style/title"
            android:text="@string/workOrderListID"
            android:layout_width="@dimen/listIDWidth"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/adminMainDateLabel"
            style="@style/title"
            android:text="Date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/adminMainWorkOrderLabel"
            />

        <TextView
            android:id="@+id/adminMainStatusLabel"
            style="@style/title"
            android:text="Status"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAdminMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeOwnerMainHeader" />

    <TextView
        android:id="@+id/adminMainBlankListTextView"
        style="@style/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewAdminMain"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        android:text="@string/blankList"
        android:gravity="center"
        />

    <Button
        android:id="@+id/adminMainStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adminMainStatusButton"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>