<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/outerMarginSpace"
    tools:context=".WorkOrderViewActivity">

    <TextView
        android:id="@+id/workOrderIDLabel"
        style="@style/textView"
        android:text="Work Order ID: "
        android:padding="@dimen/generalPaddingSpace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/workOrderIDView"
        style="@style/textView"
        android:text="999"
        android:padding="@dimen/generalPaddingSpace"
        app:layout_constraintLeft_toRightOf="@+id/workOrderIDLabel"
        app:layout_constraintTop_toTopOf="@+id/workOrderIDLabel"
        />

    <TextView
        android:id="@+id/workOrderCreatedDateLabel"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="@string/createdOn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOrderIDLabel"
        />

    <TextView
        android:id="@+id/workOrderCreatedDateView"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="Sample date 11/11/1111"
        app:layout_constraintLeft_toLeftOf="@+id/workOrderIDView"
        app:layout_constraintTop_toTopOf="@+id/workOrderCreatedDateLabel"
        />

    <TextView
        android:id="@+id/workOrderCreatorLabel"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="@string/createdBy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOrderCreatedDateLabel"
        />

    <Button
        android:id="@+id/workOrderViewCreatorInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="Sample Name"
        android:padding="@dimen/generalPaddingSpace"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="@+id/workOrderIDView"
        app:layout_constraintTop_toTopOf="@+id/workOrderCreatorLabel"
        app:layout_constraintBottom_toBottomOf="@+id/workOrderCreatorLabel"
        />

    <TextView
        android:id="@+id/workOrderEditedDateLabel"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="Last Edited:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workOrderCreatorLabel"
        />

    <TextView
        android:id="@+id/workOrderEditedDateView"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="Sample date 11/11/1111"
        app:layout_constraintLeft_toLeftOf="@+id/workOrderIDView"
        app:layout_constraintTop_toTopOf="@+id/workOrderEditedDateLabel"
        />

    <Button
        android:id="@+id/workOrderViewEditorInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="Sample Name"
        android:padding="@dimen/generalPaddingSpace"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="@+id/workOrderIDView"
        app:layout_constraintTop_toTopOf="@+id/workOrderEditorLabel"
        app:layout_constraintBottom_toBottomOf="@+id/workOrderEditorLabel"
        />

    <TextView
        android:id="@+id/workOrderEditorLabel"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="Edited By:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workOrderEditedDateLabel"
        />


    <TextView
        android:id="@+id/workOrderDescriptionLabel"
        style="@style/textView"
        android:text="Description"
        android:padding="@dimen/generalPaddingSpace"
        app:layout_constraintTop_toBottomOf="@+id/workOrderEditorLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/workOrderDescriptionView"
        style="@style/textView"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/generalPaddingSpace"
        android:enabled="false"
        android:text="Some sample text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOrderDescriptionLabel"
        />

    <TextView
        android:id="@+id/workOrderAttachedPhotoLabel"
        style="@style/textView"
        android:padding="@dimen/generalPaddingSpace"
        android:text="Attached Photots"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOrderDescriptionView"
        />

    <Button
        android:id="@+id/workOrderViewAttachPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attachPhoto"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/workOrderAttachedPhotoLabel"
        app:layout_constraintBottom_toBottomOf="@id/workOrderAttachedPhotoLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/workOrderAttachedPhotoLabel"
        />

    <TextView
        android:id="@+id/workOrderAttachedPhotoView"
        style="@style/textView"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/generalPaddingSpace"
        android:text="List of photos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOrderAttachedPhotoLabel"
        />

    <TextView
        android:id="@+id/workOrderStatusLabel"
        style="@style/textView"
        android:text="Current Status:"
        android:padding="@dimen/generalPaddingSpace"
        app:layout_constraintTop_toBottomOf="@+id/workOrderAttachedPhotoView"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/workOrderViewStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:background="@color/orange"
        android:padding="@dimen/generalPaddingSpace"
        android:enabled="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintLeft_toLeftOf="@+id/workOrderIDView"
        app:layout_constraintTop_toTopOf="@+id/workOrderStatusLabel"
        app:layout_constraintBottom_toBottomOf="@+id/workOrderStatusLabel"

        />

</androidx.constraintlayout.widget.ConstraintLayout>